--- a/index.html
+++ b/index.html
@@ -5,10 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    	
     <title>FLEX 영상 소개</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/c47106c6a7.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/048b034c7b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">    
     <script defer src="main.js"></script>
 </head>
 <body>
+    <main>
+        <header>
+            <h1>
+                <i class="fab fa-firstdraft"></i>
+                <span>W.A.B</span>
+            </h1>
+            <p>2022 WAB &copy; ALL RIGHTS RESERVED</p>
+        </header>
+
+        <section>
+            <article>
+                <div class="inner">
+                    <div class="txt">
+                        <h2>01</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias officiis minus ab quos consequuntur facilis.</p>
+                    </div>
+
+                    <figure>
+                        <video src="vids/vid1.mp4" loop muted></video>
+                    </figure>
+                </div>
+            </article>
+
+            <article>
+                <div class="inner">
+                    <div class="txt">
+                        <h2>02</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi delectus, reprehenderit non quaerat mollitia animi?</p>
+                    </div>
+
+                        <figure>
+                            <video src="vids/vid2.mp4" loop muted></video>
+                        </figure>
+                </div>
+            </article>
+
+            <article>
+                <div class="inner">
+                    <div class="txt">
+                        <h2>03</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ratione ad aliquam illum expedita quasi.</p>
+                    </div>
+
+                        <figure>
+                            <video src="vids/vid3.mp4" loop muted></video>
+                        </figure>
+                </div>
+            </article>
+
+            <article>
+                <div class="inner">
+                    <div class="txt">
+                        <h2>04</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta laboriosam suscipit natus quasi quo vero?</p>
+                    </div>
+
+                        <figure>
+                            <video src="vids/vid4.mp4" loop muted></video>
+                        </figure>
+                </div>
+            </article>
+        </section>
+
+        <nav>
+            <ul>
+                <li><a href="#"><i class="fas fa-envelope"></i></a></li>
+                <li><a href="#"><i class="fas fa-search"></i></a></li>
+            </ul>
+        </nav>
+    </main>
 </body>
 </html>
