--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
                 <li><a href="#"><i class="fas fa-search"></i></a></li>
             </ul>
         </nav>
+
+        <aside>
+            <div class="txtBox">
+                <h2>01</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias officiis minus ab quos consequuntur facilis.</p>
+            </div>
+            <div class="vidBox">
+                <video src="vids/vid1.mp4" loop muted autoplay></video>
+            </div>
+            <span class="btnClose">close</span>
+        </aside>
     </main>
 </body>
 </html>
